--- a/index.html
+++ b/index.html
@@ -14,15 +14,28 @@
   <div class="note">
     <h1>💌 A Little Note Just for You 💌</h1>
     <p>
-      Hey Girl, <br><br>
-      You make normal days feel like Fridays,<br>
-      And simple moments feel like adventures.<br><br>
-      Every time I see you, my brain forgets how to act normal.<br><br>
-      Just so you know:<br>
-      – You’re awesome.<br>
-      – You’re adorable.<br>
-      – And I may or may not like you more than pizza 🍕💖
+      Hey, <br> <br>
+
+I don’t usually write letters this fast after meeting someone,
+but here we are — you must have made quite an impression. I’m still 
+trying to figure out whether it was your smile, your vibe, or just the 
+way you made the room feel lighter (definitely wasn’t the lighting, I checked).<br>
+
+So let’s get to the real talk… are you single and ready to mingle, or do I need to 
+put my “smooth talk” back in storage? 😏 <br>
+
+Also, be honest with me — when you first saw me, what went through your mind? (I’m hoping 
+it was something like “Wow, he looks like he knows where the best jollof is,” but I’ll take 
+whatever truth you give me).<br>
+
+Anyway, I won’t keep this too long, because I’d rather save some of my charm for when we meet 
+again. Just know I enjoyed meeting you, and I’d like to keep that going. <br>
+
+Stay amazing, <br> 
+Emmay Gram <br>
     </p>
+    <div class="signature">— Yours truly, Emmanuel ✍️</div>
+
     <div class="footer">
       —From someone who thinks you’re the best thing since Wi-Fi ✨
     </div>
